# satay-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  release-plz.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: pullfrog.yml  qc.yml  release-binaries.yml  release-plz.yml  website.yml
crates/satay-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/satay-cli/src/: main.rs
crates/satay-codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/satay-codegen/src/: error.rs  ident.rs  lib.rs  model.rs  parse.rs  render.rs
crates/satay-codegen/src/error/: parse.rs  validation.rs
crates/satay-codegen/src/parse/: constraint.rs  helpers.rs  mod.rs  normalize.rs  operation.rs  reference.rs  registry.rs  satay.rs  schema.rs  tests.rs
crates/satay-codegen/src/parse/lower/: mod.rs  operation.rs  schema.rs
crates/satay-codegen/src/parse/resolve/: mod.rs  refs.rs
crates/satay-codegen/src/parse/tests/: all_of.rs  composition.rs  constraints.rs  errors.rs  extensions.rs  lowering.rs  maps.rs  mod.rs  naming.rs  unions.rs
crates/satay-codegen/src/parse/validate/: constraint.rs  index.rs  mod.rs  operation.rs  reachability.rs  satay.rs  schema.rs  state.rs
crates/satay-codegen/src/render/: api.rs  mod.rs
crates/satay-codegen/src/render/endpoint/: input.rs  json.rs  mod.rs  parts.rs  response.rs
crates/satay-codegen/src/render/types/: constrained.rs  enums.rs  mod.rs  ranges.rs  structs.rs  unions.rs
crates/satay-codegen/tests/: generate.rs
crates/satay-codegen/tests/generate/: all_of.rs  ast.rs  behavior.rs  common.rs  enums.rs  integers.rs  main.rs  maps.rs  parse_as.rs  rejections.rs  responses.rs  structure.rs  unions.rs
crates/satay-reqwest/: CHANGELOG.md  Cargo.toml  README.md
crates/satay-reqwest/src/: lib.rs
crates/satay-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/satay-runtime/src/: lib.rs
crates/satay-ureq/: CHANGELOG.md  Cargo.toml  README.md
crates/satay-ureq/src/: lib.rs
docs/: extensions.md  support.md  transports.md  validation.md
examples/: anthropic-openapi.yml  openapi.yaml
examples/reqwest/: Cargo.toml  README.md  build.rs
examples/reqwest-blocking/: Cargo.toml  README.md  build.rs
examples/reqwest-blocking/src/: main.rs
examples/reqwest-manual/: Cargo.toml  README.md
examples/reqwest-manual/src/: main.rs
examples/reqwest/src/: main.rs
examples/tungstenite-ws/: Cargo.toml  README.md
examples/tungstenite-ws/src/: error.rs  main.rs  server.rs  transport.rs  wire.rs
examples/ureq/: Cargo.toml  README.md  build.rs
examples/ureq/src/: main.rs
tests/fixtures/: constrained.yaml  inline-enum.yaml  parse-inline-constrained-enum-range.yaml  petstore-minimal.yaml  simple.expected.rs  simple.yaml
website/: .oxfmtrc.json  .oxlintrc.json  README.md  astro.config.mjs  components.json  package.json
website/src/components/landing/: CodePanel.astro  CopyButton.tsx
website/src/data/: examples.ts  users.ts
website/src/layouts/: main.astro
website/src/lib/: arborium.d.ts  highlight.ts  seo.ts  sitemap.ts  stats.ts
website/src/pages/: index.astro  robots.txt.ts  sitemap-0.xml.ts  sitemap-index.xml.ts
website/src/styles/: global.css
