[workspace]
resolver = "3"
members = [
    "crates/satay-cli",
    "crates/satay-codegen",
    "crates/satay-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
http = "1"
indexmap = "2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/zeon256/style-rust-aku", branch = "main" },
]