[workspace]
resolver = "3"
members = [
  "crates/satay-cli",
  "crates/satay-codegen",
  "crates/satay-reqwest",
  "crates/satay-runtime",
  "crates/satay-ureq",
  "examples/reqwest",
  "examples/reqwest-blocking",
  "examples/reqwest-manual",
  "examples/tungstenite-ws",
  "examples/ureq",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
argh = "0.1.19"
fast-float2 = "0.2"
http = "1"
oas3 = { version = "0.22", features = ["yaml-spec"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
satay-codegen = { version = "0.1.2", path = "crates/satay-codegen" }
satay-reqwest = { version = "0.1.2", path = "crates/satay-reqwest" }
satay-runtime = { version = "0.1.2", path = "crates/satay-runtime" }
satay-ureq = { version = "0.1.2", path = "crates/satay-ureq" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yaml_serde = "0.10"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/zeon256/style-rust-aku", branch = "main" }]
