[package]
name = "satay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "satay"
path = "src/main.rs"

[dependencies]
argh.workspace = true
satay-codegen = { path = "../satay-codegen" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
