[package]
name = "satay-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heck = "0.5"
indexmap.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syn.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
