[package]
name = "satay-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heck = "0.5"
indexmap.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true
yaml_serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
