[package]
name = "satay-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generate Rust client code from OpenAPI 3.1 documents"
repository = "https://github.com/zeon256/satay-rs"
homepage = "https://github.com/zeon256/satay-rs"
documentation = "https://docs.rs/satay-codegen"
rust-version.workspace = true

[dependencies]
heck = "0.5"
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true
yaml_serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
