[package]
name = "satay-reqwest"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
satay-runtime = { path = "../satay-runtime" }
reqwest = { version = "0.13.3", default-features = false }
thiserror.workspace = true
