[package]
name = "satay-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["serde", "json"]
serde = ["dep:fast-float", "dep:serde"]
json = ["serde", "dep:serde_json"]

[dependencies]
fast-float = { workspace = true, optional = true }
http.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
