[package]
name = "satay-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IO-free support types for Satay generated clients"
repository = "https://github.com/zeon256/satay-rs"
homepage = "https://github.com/zeon256/satay-rs"
documentation = "https://docs.rs/satay-runtime"

[features]
default = ["serde", "json"]
serde = ["dep:fast-float2", "dep:serde"]
json = ["serde", "dep:serde_json"]

[dependencies]
fast-float2 = { workspace = true, optional = true }
http.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
