[package]
name = "satay-ureq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ureq adapter for Satay generated actions"
repository = "https://github.com/zeon256/satay-rs"
homepage = "https://github.com/zeon256/satay-rs"
documentation = "https://docs.rs/satay-ureq"
rust-version.workspace = true

[dependencies]
satay-runtime.workspace = true
ureq = "3"
thiserror.workspace = true
