[package]
name = "satay-example-reqwest-blocking"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dependencies]
http = "1"
nutype = { version = "0.7", features = ["serde", "regex"] }
regex = "1"
reqwest = { version = "0.13.3", features = ["blocking"] }
satay-runtime = { path = "../../crates/satay-runtime", default-features = false }
satay-reqwest = { path = "../../crates/satay-reqwest", features = ["blocking"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
satay-codegen = { path = "../../crates/satay-codegen" }
