[package]
name = "satay-example-reqwest-manual"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dependencies]
http = "1"
nutype = { version = "0.7", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
satay-runtime = { path = "../../crates/satay-runtime", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
satay-codegen = { path = "../../crates/satay-codegen" }
