[package]
name = "satay-example-reqwest"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dependencies]
http = "1"
nutype = { version = "0.7", features = ["serde", "regex"] }
reqwest = "0.13.3"
satay-runtime = { path = "../../crates/satay-runtime", default-features = false }
satay-reqwest = { path = "../../crates/satay-reqwest" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"

[build-dependencies]
satay-codegen = { path = "../../crates/satay-codegen" }
