[package]
name = "satay-example-ureq"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dependencies]
http = "1"
nutype = { version = "0.7", features = ["serde", "regex"] }
regex = "1"
satay-runtime = { path = "../../crates/satay-runtime", default-features = false }
satay-ureq = { path = "../../crates/satay-ureq" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
ureq = "3"

[build-dependencies]
satay-codegen = { path = "../../crates/satay-codegen" }
